Fix link previews color in demos (#7578)
## Summary

In the video and dashboard apps, the link previews are too dark. We need
to change the css.

## Test plan

monorepo-commit: ba4282340a43ddab2292f95329f3d24824244d9c

--- a/dashboard-new/src/css/index.css
+++ b/dashboard-new/src/css/index.css
@@ -334,6 +334,14 @@ cord-thread.cord-component .cord-message-text .metadata-quote {
   color: var(--purple);
 }
 
+.cord-component .cord-link-preview-container {
+  border-left: 4px solid var(--white);
+}
+
+.cord-component .cord-link-preview-url {
+  color: var(--white);
+}
+
 [data-hovered-component='cord-notification-list-launcher']
   cord-notification-list-launcher
   > .cord-button[data-cord-button='open-notification-list'],
